fix menu bar overlap

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ p {
   top: 0;
   width: 100%;
   display:flex;
+  z-index:1;
 }
 
 /* Style the menu bar and dropdown content */
